updated help and about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,6 +11,7 @@
     <body>
         <div class="mainContent">
             {{>header}}
+            <p>Created on the bench</p>
             <img class="aboutMeImage" src="/img/image1.png">
         </div>
         {{>footer}}
