updated styling of weather app

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -16,11 +16,16 @@
                 <input placeholder="Location">
                 <button>Search</button>
             </form>
-            <p id="message-one"></p>
-            <p id="message-two"></p>
+            <div class="container">
+                <p id="location"></p>
+                <p id="summary"></p>
+                <p id="temp-high"></p>
+                <p id="temp-low"></p>
+                <p id="rain"></p>
+            </div>
         </div>
         {{>footer}}
-        <script src="/js/app.js"></script>
+        <script src="/js/app.js" charset="UTF-8"></script>
     </body>
 
 </html>
