--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,7 @@
 body {
     color: #333333;
     font-family: Arial, Helvetica, sans-serif;
-    max-width: 650px;
+    max-width: 450px;
     margin: 0 auto;
     padding: 0 16px;
     display: flex;
@@ -52,4 +52,14 @@ button {
     color: white;
     padding: 8px;
     margin-left: 10px;
+}
+
+.container {
+    border: 1px solid #333333;
+    margin-top: 30px;
+    padding: 20px;
+}
+
+#location {
+    font-size: 30px;
 }
