updated about me image

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,7 +11,7 @@
     <body>
         <div class="mainContent">
             {{>header}}
-            <img class="aboutMeImage" src="/img/image1.png">
+            <img class="aboutMeImage" src="/img/barry.png" alt="Coronavirus meme">
         </div>
         {{>footer}}
     </body>
